# pmac-config-manager

./: .gitignore  README.md  copy_basemodule.py  copy_configs.py  ppma-modules-ex.py  ppmac-modules-ex.py  pyproject.toml  quicktest.py  vscode-poetry.py
pmac_config_manager/: .gitignore  pmac_modulars.py  ppmac_config.py  quicktest.py  stager.py  tpmac_regex.py  utils.py
pmac_config_manager.egg-info/: PKG-INFO  requires.txt  top_level.txt
tests/: __init__.py  local_test_master.pmc  test_pmac_config_manager.py  test_tpmac_config_manager.py
tests/tpmac-code-sample/: Makefile  Master.pmc  RaScan_Master.pmc
tests/tpmac-code-sample/app/: AS_generic_CS_def.pmc  MC-268-test.pmc  MCS01_changes_191111.pmc  PLC1_BRICK_initialize.pmc  RaScan_CS_4_X-Y.pmc  RaScan_CS_4e_X-Y.pmc  RaScan_CS_5_XZ-Y.pmc  RaScan_CS_6_TX-Y.pmc  RaScan_CS_def.pmc  RaScan_Interface_def.pmc  RaScan_Prog.pmc  RaScan_Setup.pmc  Reset_CS_Limits.pmc  SR05ID01HW513_R_MTR.e.pmc  SR05ID01HW513_X_MTR.e.pmc  SR05ID01HW513_Y_MTR.e.pmc  SR05ID01HW513_Z_MTR.e.pmc  SR05ID01IOC51_MTR21.e.pmc  SR05ID01IOC51_MTR22.e.pmc  SR05ID01MCS01-a5c13e5_TBL.e.pmc  SR05ID01MCS01-a6c14e6_TBL.e.pmc
tests/tpmac-code-sample/backups/: backup190930_1051.CFG  backup191111_1613.CFG
tests/tpmac-code-sample/base/: BRICK_M_variables.pmc  BaseConfig.pmc  BaseConfigNoAxes.pmc  GB_ECT_Default.pmc  GB_ECT_SSI.pmc  Geobrick_brick_defaults.pmc  Geobrick_stepper_defaults.pmc  Makefile  PLC1_BRICK_initialize.pmc  PLC2_homing.pmc  PLCCs.pmc  (+19 more)
tpmac_config_manager/: pmac_modulars.py  quicktest.py
tpmac_config_manager.egg-info/: SOURCES.txt
