[tool.poetry]
name = "pmac-config-manager"
version = "0.1.0"
description = ""
authors = ["Nader Afshar"]

[tool.poetry.dependencies]
python = "^3.8"
dls-pmaclib = {git = "https://github.com/dls-controls/dls-pmac-lib.git", rev = "python3"}

black = "^19.10b0"
numpy = "^1.18.4"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
flake8 = "^3.8.1"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
